[gd_scene load_steps=24 format=2]

[ext_resource path="res://Sprites/SlimeCharacter-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/HealthBarBorder.png" type="Texture" id=3]
[ext_resource path="res://Sprites/HealthBarBack.png" type="Texture" id=4]
[ext_resource path="res://Sprites/HealthBarProgress.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 5 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 5, 5 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 20, 20 )

[sub_resource type="Animation" id=2]
resource_name = "Crouch"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="Animation" id=3]
resource_name = "CrouchDeeper"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Dead"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 28 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Fall"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 18 ]
}

[sub_resource type="Animation" id=6]
resource_name = "IdleLeft"
length = 5.0
loop = true
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4.5, 4.625, 4.75, 4.875, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 3, 4, 5, 4, 3 ]
}

[sub_resource type="Animation" id=7]
resource_name = "IdleRight"
length = 5.0
loop = true
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4.5, 4.625, 4.75, 4.875, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1, 2, 1, 0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "JumpArcDown"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 17 ]
}

[sub_resource type="Animation" id=12]
resource_name = "JumpArcTop"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}

[sub_resource type="Animation" id=9]
resource_name = "JumpArcUpSlow"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 15 ]
}

[sub_resource type="Animation" id=10]
resource_name = "JumpStart"
length = 0.25
step = 0.063
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.063, 0.126, 0.189 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 13, 14 ]
}

[sub_resource type="Animation" id=11]
resource_name = "Land"
length = 0.25
step = 0.063
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.063, 0.126 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22 ]
}

[sub_resource type="Animation" id=13]
resource_name = "Spawn"
length = 0.625
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 23, 24, 25, 26, 27 ]
}

[sub_resource type="Animation" id=14]
resource_name = "Start"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 22 ]
}

[sub_resource type="Animation" id=15]
resource_name = "WalkLeft"
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 8 ]
}

[sub_resource type="Animation" id=16]
resource_name = "WalkRight"
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 6 ]
}

[node name="Player" type="KinematicBody2D"]
collision_layer = 33
collision_mask = 33
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="SpikeDetection" type="Area2D" parent="."]
gravity = 0.0
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpikeDetection"]
position = Vector2( 0, 3 )
shape = SubResource( 18 )

[node name="GreaterSpikeDetection" type="Area2D" parent="."]
gravity = 0.0
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="GreaterSpikeDetection"]
position = Vector2( 0, 3 )
shape = SubResource( 17 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 29
frame = 23
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Crouch = SubResource( 2 )
anims/CrouchDeeper = SubResource( 3 )
anims/Dead = SubResource( 4 )
anims/Fall = SubResource( 5 )
anims/IdleLeft = SubResource( 6 )
anims/IdleRight = SubResource( 7 )
anims/JumpArcDown = SubResource( 8 )
anims/JumpArcTop = SubResource( 12 )
anims/JumpArcUpSlow = SubResource( 9 )
anims/JumpStart = SubResource( 10 )
anims/Land = SubResource( 11 )
anims/Spawn = SubResource( 13 )
anims/Start = SubResource( 14 )
anims/WalkLeft = SubResource( 15 )
anims/WalkRight = SubResource( 16 )

[node name="JumpForce" type="TextureProgress" parent="."]
visible = false
margin_left = -12.0
margin_top = -9.0
margin_right = 148.0
margin_bottom = 31.0
rect_scale = Vector2( 0.15, 0.25 )
max_value = 600.0
texture_under = ExtResource( 4 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GroundDetectors" type="Node2D" parent="."]

[node name="Middle" type="RayCast2D" parent="GroundDetectors"]
enabled = true
cast_to = Vector2( 0, 12 )
collision_mask = 512

[node name="Left" type="RayCast2D" parent="GroundDetectors"]
enabled = true
cast_to = Vector2( -12, 12 )
collision_mask = 512

[node name="Right" type="RayCast2D" parent="GroundDetectors"]
enabled = true
cast_to = Vector2( 12, 12 )
collision_mask = 512
[connection signal="body_entered" from="SpikeDetection" to="." method="_on_SpikeDetection_body_entered"]
[connection signal="animation_changed" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_changed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
